--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>Filmoteka</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -12,10 +12,15 @@
     />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <!-- <include src="./partials/header.html"></include> -->
+    <!-- main -->
+    <main>
+      <!-- <include src="./partials/gallery.html"></include> -->
+      <!-- <include src="./partials/pagination.html"></include> -->
+      <!-- <include src="./partials/modal.html"></include> -->
+    </main>
+    <!-- footer -->
+    <!-- <include src="./partials/footer.html"></include> -->
     <script src="./index.js"></script>
   </body>
 </html>
