icons +index.html
add icons

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <!-- <include src="./partials/header.html"></include> -->
+    <include src="./partials/header.html"></include>
     <!-- main -->
     <main>
       <!-- <include src="./partials/gallery.html"></include> -->
