--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
+    <include src="./partials/spinner.html"></include>    
+    <include src="./partials/footer.html"></include>
     <!-- main -->
     <main>
       <!-- <include src="./partials/gallery.html"></include> -->
@@ -22,5 +24,5 @@
     <!-- footer -->
     <!-- <include src="./partials/footer.html"></include> -->
     <script src="./index.js"></script>
-  </body>
+    </body>
 </html>
