--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <include src="./partials/header.html"></include>
     <!-- main -->
     <main>
-      <!-- <include src="./partials/gallery.html"></include> -->
+      <include src="./partials/gallery.html"></include>
       <!-- <include src="./partials/pagination.html"></include> -->
       <!-- <include src="./partials/modal.html"></include> -->
     </main>
