--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <!-- main -->
     <main>
       <!-- <include src="./partials/gallery.html"></include> -->
-      <!-- <include src="./partials/pagination.html"></include> -->
+      <include src="./partials/pagination.html"></include>
       <!-- <include src="./partials/modal.html"></include> -->
     </main>
     <!-- footer -->
