--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,18 @@
     />
   </head>
   <body>
-    <include src="./partials/header.html"></include>
-    <!-- main -->
-    <main>
-      <include src="./partials/gallery.html"></include>
-      <include src="./partials/spinner.html"></include>   
-    </main>
-    <!-- footer -->
-    <include src="./partials/footer.html"></include>
-    <!-- popup -->
-    <include src="./partials/popup.html"></include>
-    <script src="./index.js"></script>
+      <div class="wrapper">
+        <include src="./partials/header.html"></include>
+        <!-- main -->
+        <main>
+          <include src="./partials/gallery.html"></include>
+          <include src="./partials/spinner.html"></include>   
+        </main>
+        <!-- footer -->
+        <include src="./partials/footer.html"></include>
+      </div>
+        <!-- popup -->
+        <include src="./partials/popup.html"></include>
+        <script src="./index.js"></script>
     </body>
 </html>
